# eval-driven-design-platform

./: .env.example  .gitignore  AGENTS.md  EVAL_DRIVEN_DESIGN_PLAN.md  Makefile  README.md
api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api/app/: main.py
api/app/api/: deps.py  eval_cases.py  eval_specs.py  evaluation_results.py  experiment_runs.py  health.py  lab_integrations.py  langfuse_integrations.py  run_integrations.py
api/app/core/: config.py  errors.py  logging.py  metrics.py  tracing.py
api/app/domain/: models.py
api/app/integrations/: langfuse_client.py
api/app/services/: evidence_normalization.py  experiment_service.py  lab_publish_service.py  mock_evaluator.py  publish_envelope.py  quality_gate_service.py  readiness_evaluation.py  run_ingest_service.py  scaffold_runner.py
api/migrations/: env.py  script.py.mako
api/openapi/: openapi.json
api/tests/: conftest.py  test_auth.py  test_edd_artifact_schemas.py  test_eval_crud.py  test_evaluation_results.py  test_evidence_api.py  test_evidence_normalization.py  test_experiment_runs.py  test_health.py  test_lab_integration.py  test_langfuse_integration.py  test_mock_evaluator.py  test_publish_contract_fixtures.py  test_publish_contract_fixtures_v2.py  test_quality_gates.py  test_readiness_evaluation.py
console/: Dockerfile  navigation.py  pyproject.toml  streamlit_app.py
console/.streamlit/: config.toml
console/components/: api_client.py  design_context.py  edd_reference.py  edd_views.py  layout.py  platform_sidebar.py  ui.py
console/pages/: 10_Behavior_Rules.py  11_Eval_Contract.py  12_Graph_Design.py  13_Information_Requirements.py  14_Tool_Requirements.py  15_Tool_Feasibility.py  16_Failure_Packets.py  17_Fix_Plans.py  18_Compare_Versions.py  1_Overview.py  2_Eval_Specs.py  2_Operations.py  3_Eval_Cases.py  4_Runs.py  5_Results_Explorer.py  6_Quality_Gates.py  7_Langfuse.py  8_Operations.py  9_Agent_Target.py
console/styles/: dashboard.css
console/tests/: test_api_client.py  test_edd_reference.py  test_layout.py  test_metrics.py  test_navigation.py  test_platform_sidebar.py
worker/: Dockerfile  pyproject.toml
worker/app/: main.py
(+105 files in other folders)
