[project]
name = "edd-console"
version = "0.1.0"
description = "Streamlit operator console for the Eval Driven Design Platform."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "streamlit>=1.41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["components"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
